--- a/Java e Javascript/javascript Dario/ProjectWork/Home copy.html
+++ b/Java e Javascript/javascript Dario/ProjectWork/Home copy.html
@@ -229,7 +229,7 @@
           <div class="card-body">
             <div class="card-content" id="contenuti">
             <h5 class="card-title text-white">Pulp Fiction</h5>
-            <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> 24 Ottobre 2023, Napoli</p>
+            <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data">24 Ottobre 2023, Napoli</span></p>
           </div>
           </div>
         </div>
@@ -240,7 +240,7 @@
           <div class="card-body">
             <div class="card-content" id="contenuti">
             <h5 class="card-title text-white">Pulp Fiction</h5>
-            <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> 26 Ottobre 2023, Napoli</p>
+            <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data">26 Ottobre 2023, Napoli</span></p>
           </div>
           </div>
         </div>
@@ -252,7 +252,7 @@
           <div class="card-body">
             <div class="card-content" id="contenuti">
             <h5 class="card-title text-white">Interstellar</h5>
-            <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> 30 Ottobre 2023, Napoli</p>
+            <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data">30 Ottobre 2023, Napoli</span></p>
           </div>
           </div>
         </div>
@@ -266,7 +266,7 @@
           <div class="card-body">
             <div class="card-content" id="contenuti">
             <h5 class="card-title text-white">Star wars: Revenge of the sith</h5>
-            <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> 4 Novembre 2023, Napoli</p>
+            <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data">4 Novembre 2023, Napoli</span></p>
           </div>
           </div>
         </div>
@@ -280,7 +280,7 @@
           <div class="card-body">
             <div class="card-content" id="contenuti">
             <h5 class="card-title text-white">Oppenheimer</h5>
-            <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> 10 Novembre 2023, Napoli</p>
+            <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data">10 Novembre 2023, Napoli</span></p>
           </div>
           </div>
         </div>
@@ -292,7 +292,7 @@
           <div class="card-body">
             <div class="card-content" id="contenuti">
             <h5 class="card-title text-white">ColdPlay</h5>
-            <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> 13 Novembre 2023, Napoli</p>
+            <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data">13 Novembre 2023, Napoli</span></p>
           </div>
           </div>
         </div>
@@ -303,7 +303,7 @@
             <div class="card-body">
               <div class="card-content" id="contenuti">
               <h5 class="card-title text-white">5 Seconds of Summer</h5>
-              <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> 17 Novembre 2023, Napoli</p>
+              <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data">17 Novembre 2023, Napoli</span></p>
             </div>
             </div>
           </div>
@@ -315,7 +315,7 @@
               <div class="card-body">
                 <div class="card-content" id="contenuti">
                 <h5 class="card-title text-white">Elodie</h5>
-                <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> 22 Novembre 2023, Napoli</p>
+                <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data">22 Novembre 2023, Napoli</span></p>
               </div>
               </div>
             </div>
@@ -327,7 +327,7 @@
               <div class="card-body">
                 <div class="card-content" id="contenuti">
                 <h5 class="card-title text-white">Fall out Boy</h5>
-                <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> 28 Novembre 2023, Napoli</p>
+                <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data">28 Novembre 2023, Napoli</span></p>
               </div>
               </div>
             </div>
@@ -339,7 +339,7 @@
                 <div class="card-body">
                   <div class="card-content" id="contenuti">
                   <h5 class="card-title text-white">Rammstein</h5>
-                  <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> 1 Dicembre 2023, Napoli</p>
+                  <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data">1 Dicembre 2023, Napoli</span></p>
                 </div>
                 </div>
               </div>
@@ -351,7 +351,7 @@
                   <div class="card-body">
                     <div class="card-content" id="contenuti">
                     <h5 class="card-title text-white">Ragione e Sentimento</h5>
-                    <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> 10 Dicembre 2023, Napoli</p>
+                    <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data">10 Dicembre 2023, Napoli</span></p>
                   </div>
                   </div>
                 </div>
@@ -363,7 +363,7 @@
                     <div class="card-body">
                       <div class="card-content" id="contenuti">
                       <h5 class="card-title text-white">Sogni e illusioni di libertà</h5>
-                      <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> 16 Dicembre 2023, Napoli</p>
+                      <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data">16 Dicembre 2023, Napoli</span></p>
                     </div>
                     </div>
                   </div>
@@ -375,7 +375,7 @@
                       <div class="card-body">
                         <div class="card-content" id="contenuti">
                         <h5 class="card-title text-white">La lingua ospite</h5>
-                        <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> 20 Dicembre 2023, Napoli</p>
+                        <p class="card-text text-white"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data">20 Dicembre 2023, Napoli</span></p>
                       </div>
                       </div>
                     </div>
@@ -418,7 +418,7 @@
 
                   <div class="card-content">
                     <h5 class="card-title text-black d-flex justify-content-between">Imagine Dragons</h5>
-                    <p class="card-text"><span><button type="button" class="btn btn-warning">Info</button></span> <span>7 Gennaio 2024, Napoli</span></p>
+                    <p class="card-text"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data-futuri">7 Gennaio 2024, Napoli</span></p>
                   </div>
                 </div>
               </div>
@@ -431,7 +431,7 @@
                 <div class="card-body">
                   <div class="card-content">
                     <h5 class="card-title text-black">Taylor Swift</h5>
-                    <p class="card-text"><span><button type="button" class="btn btn-warning">Leggi</button></span> <span>25 Dicembre 2024, Napoli</span></p>
+                    <p class="card-text"><span><button type="button" class="btn btn-warning">Leggi</button></span> <span class="data-futuri">25 Dicembre 2024, Napoli</span></p>
                   </div>
                 </div>
               </div>
@@ -451,7 +451,7 @@
               <div class="card-body">
                 <div class="card-content">
                   <h5 class="card-title text-black">Signore degli anelli</h5>
-                  <p class="card-text"><span><button type="button" class="btn btn-warning">Leggi</button></span> <span>27 Novembre 2024, Napoli</span></p>
+                  <p class="card-text"><span><button type="button" class="btn btn-warning">Leggi</button></span> <span class="data-futuri">27 Novembre 2024, Napoli</span></p>
                 </div>
               </div>
             </div>
@@ -462,7 +462,7 @@
               <div class="card-body">
                 <div class="card-content">
                   <h5 class="card-title text-black">Il mondo del ghiaccio e del fuoco</h5>
-                  <p class="card-text"><span><button type="button" class="btn btn-warning">Leggi</button></span> <span>5 Agosto 2024, Napoli</span></p>
+                  <p class="card-text"><span><button type="button" class="btn btn-warning">Leggi</button></span> <span class="data-futuri">5 Agosto 2024, Napoli</span></p>
                 </div>
               </div>
             </div>
@@ -583,24 +583,27 @@
 
             <ul class="list-unstyled">
               <li>
-                Iscriviti alla nostra Newsletter per ricere le ultime novità
+                Iscriviti alla nostra Newsletter per ricere le ultime novità settimanali!
               </li>
               <li class="my-4">
-                <div class="input-group mb-3 w-75">
-                  <input type="text" class="form-control w" placeholder="Email" aria-label="Email"
+                <div class="input-group  ">
+                  <input type="text" class="form-control  " placeholder="Email" aria-label="Email"
                     aria-describedby="button-addon2 ">
                   <button class="btn btn-outline-secondary" type="button" id="button-addon2">Register</button>
                 </div>
               </li>
-              <li class="my-3">
-                <a href=""><i class="fa-brands fa-x-twitter" style="color: #a9a066;"></i></a>
-                <a href=""><i class="fa-brands fa-facebook-f" style="color: #a9a066;"></i></a>
-                <a href=""><i class="fa-brands fa-instagram" style="color: #a9a066;"></i></a>
-                <a href=""><i class="fa-brands fa-youtube" style="color: #a9a066;"></i></a>
-              </li>
             </ul>
 
         </div>
+        <hr class="my-5">
+        <ul>
+          <li class="my-3 social center-align">
+            <a href=""><i class="fa-brands fa-x-twitter" style="color: #a9a066;"></i></a>
+            <a href=""><i class="fa-brands fa-facebook-f" style="color: #a9a066;"></i></a>
+            <a href=""><i class="fa-brands fa-instagram" style="color: #a9a066;"></i></a>
+            <a href=""><i class="fa-brands fa-youtube" style="color: #a9a066;"></i></a>
+          </li>
+        </ul>
 
       </div>
       <button type="button" class="btn btn-primary justify-content-end "><i class="fa-solid fa-arrow-up"></i></button>
