--- a/Java e Javascript/javascript Dario/ProjectWork/BannerBootstrap.html
+++ b/Java e Javascript/javascript Dario/ProjectWork/BannerBootstrap.html
@@ -322,7 +322,7 @@
 
                   <div class="card-content">
                     <h5 class="card-title text-black d-flex justify-content-between">Imagine Dragons</h5>
-                    <p class="card-text"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data-futuri">7 Gennaio 2024, Napoli</span></p>
+                    <p class="card-text"><span><button type="button" class="btn btn-warning">Info</button></span> <span class="data-futuri">7 Gennaio 2024</span></p>
                   </div>
                 </div>
               </div>
@@ -335,7 +335,7 @@
                 <div class="card-body">
                   <div class="card-content">
                     <h5 class="card-title text-black">Taylor Swift</h5>
-                    <p class="card-text"><span><button type="button" class="btn btn-warning">Leggi</button></span> <span class="data-futuri">25 Dicembre 2024, Napoli</span></p>
+                    <p class="card-text"><span><button type="button" class="btn btn-warning">Leggi</button></span> <span class="data-futuri">25 Dicembre 2024</span></p>
                   </div>
                 </div>
               </div>
@@ -355,7 +355,7 @@
               <div class="card-body">
                 <div class="card-content">
                   <h5 class="card-title text-black">Signore degli anelli</h5>
-                  <p class="card-text"><span><button type="button" class="btn btn-warning">Leggi</button></span> <span class="data-futuri">27 Novembre 2024, Napoli</span></p>
+                  <p class="card-text"><span><button type="button" class="btn btn-warning">Leggi</button></span> <span class="data-futuri">27 Novembre 2024</span></p>
                 </div>
               </div>
             </div>
@@ -366,7 +366,7 @@
               <div class="card-body">
                 <div class="card-content">
                   <h5 class="card-title text-black">Il mondo del ghiaccio e del fuoco</h5>
-                  <p class="card-text"><span><button type="button" class="btn btn-warning">Leggi</button></span> <span class="data-futuri">5 Agosto 2024, Napoli</span></p>
+                  <p class="card-text"><span><button type="button" class="btn btn-warning">Leggi</button></span> <span class="data-futuri">5 Agosto 2024</span></p>
                 </div>
               </div>
             </div>
