--- a/Java e Javascript/javascript Dario/ProjectWork/BannerBootstrap.html
+++ b/Java e Javascript/javascript Dario/ProjectWork/BannerBootstrap.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/provaBootstrap.css">
     <link rel="stylesheet" href="./css/eventifuturi.css">
     <link rel="stylesheet" href="./css/Homepage.css">
-    <title>con Bootstrap</title>
+    <title>Homepage</title>
 
 </head>
 
@@ -380,6 +380,8 @@
       </div>
     </div>
   </section>
+
+CITAZIONI
 
 <!-- CALENDARIO -->
   <div class="container text-center bg-white ">
