--- a/HTML CSS/swiper/index.html
+++ b/HTML CSS/swiper/index.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" href="./css/swiper.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,700&display=swap" rel="stylesheet">
 
 
 
@@ -26,21 +29,30 @@
     <div class="swiper-wrapper">
       <!-- Slides -->
       <div class="swiper-slide scorri">
-        
+        <h1>“</h1>
         <h4> “A theatre, a literature, an artistic expression that does not speak for its own time has no relevance.”</h4>
         <h3>Denis Diderot</h3>
         <h6> Reviewer</h6>
       </div>
       <div class="swiper-slide scorri">
-        TESTO 2
+        <h1>“</h1>
+        <h4> “A theatre, a literature, an artistic expression that does not speak for its own time has no relevance.”</h4>
+        <h3>Denis Diderot</h3>
+        <h6> Reviewer</h6>
 
       </div>
       <div class="swiper-slide scorri">
-        TESTO 3
+        <h1>“</h1>
+        <h4> “A theatre, a literature, an artistic expression that does not speak for its own time has no relevance.”</h4>
+        <h3>Giovanni Mazzone</h3>
+        <h6> Buh787</h6>
       </div>
 
       <div class="swiper-slide scorri">
-        TESTO 4
+        <h1>“</h1>
+        <h4> “A theatre, a literature, an artistic expression that does not speak for its own time has no relevance.”</h4>
+        <h3>Emanuele Cangiano</h3>
+        <h6> bUH2345</h6>
       </div>
     
     </div>
@@ -76,6 +88,7 @@ const swiper = new Swiper('.swiper', {
   // If we need pagination
   pagination: {
     el: '.swiper-pagination',
+    clickable: true
   },
 
   // Navigation arrows
