--- a/Java e Javascript/javascript Dario/ProjectWork/BannerBootstrap.html
+++ b/Java e Javascript/javascript Dario/ProjectWork/BannerBootstrap.html
@@ -324,7 +324,7 @@
           <div class="row">
 
             <div class="col-lg-6">
-              <div class="card evento">
+              <div class="card eventi">
                 <img src="/img/futuri-imaginedragons.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
 
@@ -338,7 +338,7 @@
 
 
             <div class="col-lg-6">
-              <div class="card evento">
+              <div class="card eventi">
                 <img src="/img/futuri-taylor.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <div class="card-content">
@@ -358,7 +358,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <div class="card evento">
+            <div class="card eventi">
               <img src="/img/futuri-signoredeglianelli.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <div class="card-content">
@@ -369,7 +369,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <div class="card evento">
+            <div class="card eventi">
               <img src="/img/futuri-game of thrones.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <div class="card-content">
